# pelican-heatmap

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  main-updated.yaml  publish-to-pypi.yaml
src/pelican/plugins/heatmap/: __init__.py  heatmap.py
src/pelican/plugins/heatmap/static/: pelican_heatmap.css  pelican_heatmap.js
tests/: test_heatmap.py
