[project]
name = "pelican-heatmap"
version = "0.2.1"
description = "A Pelican plugin that generates a GitHub-style writing heatmap from your articles"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Wei Lee", email = "weilee.rx@gmail.com" }]
requires-python = ">=3.10"
keywords = ["pelican", "plugin", "heatmap", "blog", "writing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Plugins",
  "Framework :: Pelican :: Plugins",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["pelican>=4.5"]

[dependency-groups]
dev = [
  { include-group = "base" },
  { include-group = "test" },
  { include-group = "linters" },
]

base = ["poethepoet>=0.41.0"]

test = [
  "pytest>=9",
  "pytest-cov>=4",
  "pytest-xdist>=3.1.0",
]

linters = [
  "ruff>=0.15.1",
  "mypy>=1.19.1",
  "prek>=0.3.3",
  "commitizen>=4.13.9",
]

[project.urls]
Homepage = "https://github.com/Lee-W/pelican-heatmap"
Repository = "https://github.com/Lee-W/pelican-heatmap"
Issues = "https://github.com/Lee-W/pelican-heatmap/issues"

[build-system]
requires = ["uv_build >= 0.10.3, <0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pelican.plugins.heatmap"
module-root = "src"

[tool.mypy]
files = ["src", "tests"]
disallow_untyped_decorators = true
disallow_subclassing_any = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pelican.*"]
ignore_missing_imports = true

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.svg,*.lock'
check-hidden = true
ignore-words-list = 'asend'

[tool.poe.tasks]
format.help = "Format the code"
format.sequence = [{ cmd = "ruff check --fix" }, { cmd = "ruff format" }]

lint.help = "Lint the code"
lint.sequence = [{ cmd = "ruff check" }, { cmd = "mypy" }]

check-commit.help = "Check the commit messages"
check-commit.cmd = "cz --no-raise 3 check --rev-range origin/main.."

test.help = "Run the test suite"
test.cmd = "pytest -n auto --dist=loadfile"

cover.help = "Run the test suite with coverage"
cover.ref = "test --cov-report term-missing --cov-report=xml:coverage.xml --cov=commitizen  --junitxml=junit.xml -o junit_family=legacy"

all.help = "Run all tasks"
all.sequence = ["format", "lint", "check-commit", "cover"]

ci.help = "Run all tasks in CI"
ci.sequence = ["check-commit", { cmd = "prek run --all-files" }, "cover"]
ci.env = { SKIP = "no-commit-to-branch" }

setup-pre-commit.help = "Install pre-commit hooks"
setup-pre-commit.cmd = "prek install"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.pytest]
testpaths = ["tests"]
addopts = ["--cov=pelican.plugins.heatmap", "--cov-report=term-missing"]

[tool.coverage.run]
source = ["pelican/plugins/heatmap"]

[tool.coverage.paths]
source = ["src/pelican/plugins/heatmap", "*/pelican/plugins/heatmap"]
